Closed Bug 1848764 Opened 2 years ago Closed 2 years ago

[Wayland] Wayland only build fails to build UserIdleService

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
118 Branch
Tracking Status
firefox118 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

 3:45.73 In file included from Unified_cpp_widget_gtk2.cpp:101:
 3:45.73 /raid/src3/widget/gtk/nsUserIdleServiceGTK.cpp:249:25: error: unknown type name 'UserIdleServiceX11'; did you mean 'UserIdleServiceImpl'?
 3:45.73       idleService = new UserIdleServiceX11(this);
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/545c91ab7629 [Wayland] Don't use UserIdleServiceX11() on Wayland only builds r=emilio
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: