Bug 1848764 [Wayland] Don't use UserIdleServiceX11() on Wayland only builds r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D186209